fix: layout body overflow 처리, body margin top 설정

--- a/src/component/layout/Layout.css
+++ b/src/component/layout/Layout.css
@@ -10,6 +10,8 @@
     flex-direction: column;
     width: 100%;
     flex-wrap: wrap;
+    overflow-x: auto;
+    margin-top: 10vh; /*header 높이 만큼 내려주기*/
 }
 content{
     flex:1
